--- a/copyfile.yaml
+++ b/copyfile.yaml
@@ -1,4 +1,4 @@
-# copy_file.yml
+# copying both files from control node and managed node
 ---
 - name: Copy file from control node to managed node
   hosts: managed_nodes
