--- a/inventory.ini
+++ b/inventory.ini
@@ -1,4 +1,4 @@
-#details oh slave server
+#details of slave server
 [managed_nodes]
 192.168.56.105 ansible_user=user1 ansible_become_password=1234 ansible_ssh_pass=1234 ansible_port=22
 
